Fixed NavLinks alignment

--- a/frontend/src/shared/components/Navigation/NavLinks.css
+++ b/frontend/src/shared/components/Navigation/NavLinks.css
@@ -1,4 +1,6 @@
 .main-navigation {
+  padding-right: 1rem;
+  padding-left: 1rem;
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -32,12 +34,14 @@
 .nav-links a {
   color: #f3f3f3;
   text-decoration: none;
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
 }
 
 .main-navigation li {
   border: none;
   background-color: #5d5cbc;
+  padding-top: 0.9rem;
+  padding-bottom: 1rem;
   color: #f3f3f3;
   height: 3rem;
   width: fit-content;
@@ -63,7 +67,7 @@
   font: inherit;
 }
 
-.nav-links button:focus {
+/* .nav-links button:focus {
   outline: none;
 }
 
@@ -71,4 +75,4 @@
 .nav-links button:active {
   background: #292929;
   color: white;
-}
+} */
